[project]
name = "comfyui-llm-prompt-enhancer"
description = "A ComfyUI node for enhancing prompts using various LLM providers"
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["openai>=1.0.0", "anthropic>=0.5.0", "google-generativeai>=0.3.0", "torch>=2.0.0", "requests>=2.31.0", "openrouter-client>=0.3.0", "openrouter>=0.3.0"]

[project.urls]
Repository = "https://github.com/pinkpixel-dev/comfyui-llm-prompt-enhancer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pinkpixel-dev"
DisplayName = "ComfyUI LLM Prompt Enhancer"
Icon = "https://res.cloudinary.com/di7ctlowx/image/upload/v1738065925/promptenhancelogo_kql6qa.svg"
